// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Code DOCKIT example UU5.Bricks.Code example 01 1`] = `
<_code
  className="uu5-bricks-code"
  content="<UU5.Bricks.Code/>"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkGrammar 1`] = `
<_code
  checkGrammar={true}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkGrammar 2`] = `
<_code
  checkGrammar={false}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkGrammar 3`] = `
<_code
  checkGrammar={false}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkGrammar 4`] = `
<_code
  checkGrammar={true}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkHighlight 1`] = `
<_code
  checkHighlight={true}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkHighlight 2`] = `
<_code
  checkHighlight={false}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkHighlight 3`] = `
<_code
  checkHighlight={false}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkHighlight 4`] = `
<_code
  checkHighlight={true}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkSpaces 1`] = `
<_code
  checkSpaces={true}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkSpaces 2`] = `
<_code
  checkSpaces={false}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkSpaces 3`] = `
<_code
  checkSpaces={false}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code checkSpaces 4`] = `
<_code
  checkSpaces={true}
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code className 1`] = `
<_code
  className="uu5-bricks-code my-classname"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code content 1`] = `
<_code
  className="uu5-bricks-code"
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code content 2`] = `
<_code
  className="uu5-bricks-code"
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code content 3`] = `
<_code
  className="uu5-bricks-code"
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code content 4`] = `
<_code
  className="uu5-bricks-code"
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code controlled 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code controlled 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code controlled 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code controlled 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code default props 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code disabled 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code disabled 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code disabled 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code disabled 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code dynamic 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code dynamic 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code dynamic 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code dynamic 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code hidden 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code hidden 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code hidden 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code hidden 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code id 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="myId-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code ignoreHTML 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code ignoreHTML 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code ignoreHTML 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code ignoreHTML 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code mainAttrs 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code name 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 5`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 6`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 7`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 8`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 9`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 10`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 11`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 12`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 13`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 14`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 15`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 16`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 17`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 18`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 19`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code nestingLevel 20`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code noIndex 1`] = `
<_code
  className="uu5-bricks-code uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code noIndex 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code noIndex 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code noIndex 4`] = `
<_code
  className="uu5-bricks-code uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code pureRender 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code pureRender 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code pureRender 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code pureRender 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code selected 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code selected 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code selected 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code selected 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code style 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code style 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code style 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code style 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code textCorrector 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={true}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code textCorrector 2`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={false}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code textCorrector 3`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={false}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code textCorrector 4`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  textCorrector={true}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Code tooltip 1`] = `
<_code
  className="uu5-bricks-code"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-code"
  ignoreInnerHTML={true}
  language="code"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
/>
`;
